# NN_classification

./: CMakeLists.txt  README.md
include/: neural_network.h
src/: neural_network.cpp  nn_classification.cpp
